# planeShootGame

./: CMakeLists.txt  README.md  bullet.cpp  bullet.h  button.cpp  enemy.cpp  enemy.h  game.cpp  game.h  health.cpp  health.h  main.cpp  player.cpp  player.h  res.qrc  score.cpp  score.h
